[gd_scene load_steps=2 format=3 uid="uid://cy5v2lnpry1kc"]

[ext_resource type="Script" path="res://Scripts/Menu/settings_menu.gd" id="1_21rpf"]

[node name="Settings Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_21rpf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 426.0
offset_bottom = 253.0

[node name="Vol_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume_Slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="Mute_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Mute" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2

[node name="Resolutions_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="Resolutions" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="VBoxContainer/Volume_Slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
